--- a/layouts/BasicLayout/BasicLayout.scss
+++ b/layouts/BasicLayout/BasicLayout.scss
@@ -1,7 +1,18 @@
 .basic-layout {
   min-height: 100vh;
+  background-image: url("https://ecommerce-s3-game.s3.us-east-2.amazonaws.com/static/bg-web.jpg");
+  background-size: cover;
+  background-position: center;
   .content {
     background-color: $background-grey-light;
-    height: 100vh;
+    height: calc(100vh - 130px);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    overflow: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
